--- a/client/src/style/main.scss
+++ b/client/src/style/main.scss
@@ -28,7 +28,7 @@ hr {
 
 .Button {
   width: fit-content;
-  background-color: $main-blue; // TODO: create variable
+  background-color: $main-blue;
   border: none;
   color: white;
   padding: 10px 32px;
