--- a/client/src/Components/EmployeeList/EmployeesList.scss
+++ b/client/src/Components/EmployeeList/EmployeesList.scss
@@ -1,3 +1,5 @@
+@import '../../Style//variables.scss';
+
 .EmployeeList__Container {
   width: 100%;
   display: flex;
@@ -10,7 +12,10 @@
   width: 60vw;
   height: 8vh;
   box-sizing: border-box;
-  border-bottom: solid 1px black;
+
+  &:hover {
+    background-color: $grey-2;
+  }
 }
 
 .ListItem__Wrapper {
