--- a/client/src/Components/UI/modal.scss
+++ b/client/src/Components/UI/modal.scss
@@ -4,7 +4,7 @@
   left: 0px;
   display: block;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
   z-index: 50;
