--- a/client/src/style/variables.scss
+++ b/client/src/style/variables.scss
@@ -8,7 +8,9 @@ $green-1: #4caf50;
 $green-2: #45a049;
 
 $grey-1: #b4b4b4;
+$grey-2: #f8f8f8;
 
 $line-height: 32px;
 
 $margin-top-section: 7vh;
+$section-border: 1px solid $grey-1;
